Added new lightweight command to set trade boolean

--- a/teanicorns-art-trade-bot/Properties/Resources.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.resx
@@ -162,6 +162,12 @@
   <data name="REF_TRADE_THEME" xml:space="preserve">
     <value>Theme of this art trade is.. \"{0}\"</value>
   </data>
+  <data name="TRADE_ACTIVE_PROBLEM" xml:space="preserve">
+    <value>Sorry &lt;@{0}&gt;. There has been a problem during the setting of trade boolean.</value>
+  </data>
+  <data name="TRADE_ACTIVE_SET" xml:space="preserve">
+    <value>&lt;@{0}&gt; the trade boolean has been set.</value>
+  </data>
   <data name="TRADE_ADMIN_BLOCK" xml:space="preserve">
     <value>Sorry &lt;@{0}&gt;. You don't have required priviledges to run this command.</value>
   </data>
