--- a/teanicorns-art-trade-bot/Properties/Resources.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.resx
@@ -225,6 +225,9 @@
   <data name="TRADE_LISTING_ALL" xml:space="preserve">
     <value>Listing all entries &lt;@{0}&gt;. Each next entry is the partner of the previous one.</value>
   </data>
+  <data name="TRADE_LIST_OTHER_INFO" xml:space="preserve">
+    <value>Listing other info.. working channel is.. \"{0}\", trade is taking place from.. {1} to {2} ({3} days), notify flags.. {4}, trade end forced.. {5}</value>
+  </data>
   <data name="TRADE_NEW_ENTRIES" xml:space="preserve">
     <value>@everyone the **entry week** started. **We are accepting new entries!**</value>
   </data>
