--- a/teanicorns-art-trade-bot/Properties/Resources.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.resx
@@ -205,7 +205,7 @@
     <value>Sorry &lt;@{0}&gt;. Was not able to change the working channel. Current working channel is {1}.</value>
   </data>
   <data name="TRADE_CHANNEL_SET" xml:space="preserve">
-    <value>Channel has been set successfully &lt;@{0}&gt;.</value>
+    <value>Channel has been set successfully.</value>
   </data>
   <data name="TRADE_ENDS_ON" xml:space="preserve">
     <value>The art trade ends on.. {0}.</value>
