--- a/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.en-GB.resx
@@ -154,7 +154,7 @@
     <value>&lt;@{0}&gt; I need description and/or embeded image, please send again.. ówò</value>
   </data>
   <data name="REF_TRADE_PARTNER" xml:space="preserve">
-    <value>&lt;@{0}&gt; **{1}** is your partner, good luck.. owo</value>
+    <value>&lt;@{0}&gt; your partner is **{1}** , Have Fun!.. ^•^ </value>
   </data>
   <data name="REF_TRADE_REG_SUCC" xml:space="preserve">
     <value>&lt;@{0}&gt; I saved your entry.. ^•^ </value>
@@ -178,7 +178,7 @@
     <value>Naughty list: {0} .. òwó</value>
   </data>
   <data name="TRADE_ART_ON_TIME" xml:space="preserve">
-    <value>Naughty list: **empty**.. ^∆^</value>
+    <value>Naughty list: **empty**.. ＼(◎o◎)／！I'm so proud you guys！</value>
   </data>
   <data name="TRADE_BACKUP_DATABASE_DONE" xml:space="preserve">
     <value>&lt;@{0}&gt; here you go.. ^•^ </value>
@@ -208,7 +208,7 @@
     <value>I changed the channel.. ^•^ </value>
   </data>
   <data name="TRADE_ENDS_ON" xml:space="preserve">
-    <value>trade ends.. **{0}**</value>
+    <value>The trade will be ending on.. **{0}**.. ^•^ </value>
   </data>
   <data name="TRADE_ENTRIES_CLEARED" xml:space="preserve">
     <value>&lt;@{0}&gt; I cleared all entries.. ^•^ </value>
@@ -226,10 +226,10 @@
     <value>channel: **{0}**, trade from {1} to {2} ({3} days), flags: **{4}**, end forced: **{5}**</value>
   </data>
   <data name="TRADE_NEW_ENTRIES" xml:space="preserve">
-    <value>@everyone **trade** ended, I'm waiting for your new entries.. ^•^ </value>
+    <value>@everyone the **entry week** started. **We are accepting new entries!**.. ^•^ </value>
   </data>
   <data name="TRADE_NO_NEW_ENTRIES" xml:space="preserve">
-    <value>@everyone **trade** starts, please don't send me more entries.. ówò</value>
+    <value>@everyone the **trade month** started. **We are no longer accepting new entries!**.. ówò</value>
   </data>
   <data name="TRADE_RESTORE_DATABASE_DONE" xml:space="preserve">
     <value>&lt;@{0}&gt; I loaded the database.. ^•^ </value>
@@ -262,10 +262,10 @@
     <value>no users:</value>
   </data>
   <data name="TRADE_TAKING_PLACE_EW" xml:space="preserve">
-    <value>**trade** is **on**</value>
+    <value>**trade** is **OFF**</value>
   </data>
   <data name="TRADE_TAKING_PLACE_TM" xml:space="preserve">
-    <value>**trade** is **off**</value>
+    <value>**trade** is **ON**</value>
   </data>
   <data name="TRADE_THEME_NULL" xml:space="preserve">
     <value>&lt;@{0}&gt; You gave me null or whitespace theme.. òwó</value>
