--- a/teanicorns-art-trade-bot/Properties/Resources.ja-JP.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.ja-JP.resx
@@ -288,4 +288,13 @@
   <data name="GOOGLE_TRADE_ENDING_SOON1" xml:space="preserve">
     <value>Hewo ~ @everyone the art **Trade month** will be ending in 7 days, pweeasee reveal your art until then or there will be grave consequences OwO !!!</value>
   </data>
+  <data name="TRADE_ART_LATE_1" xml:space="preserve">
+    <value>WHAT ? The following fwiends did not reveal their amazing art for previous month (themed {0}) :{1}</value>
+  </data>
+  <data name="TRADE_ART_LATE_2" xml:space="preserve">
+    <value>WHAT ? The following fwiends did not reveal their amazing art for previous month (themed {0}) :{1}</value>
+  </data>
+  <data name="TRADE_ART_LATE_DM" xml:space="preserve">
+    <value>Hello &lt;@{0}&gt;The current trade ({1} themed) is ending but you did not reveal your art in time, please do so as soon as you have the time, thanks!</value>
+  </data>
 </root>
