--- a/teanicorns-art-trade-bot/Properties/Resources.ja-JP.resx
+++ b/teanicorns-art-trade-bot/Properties/Resources.ja-JP.resx
@@ -297,4 +297,7 @@
   <data name="TRADE_ART_LATE_DM" xml:space="preserve">
     <value>Hello &lt;@{0}&gt;The current trade ({1} themed) is ending but you did not reveal your art in time, please do so as soon as you have the time, thanks!</value>
   </data>
+  <data name="REF_TRADE_LAST_MONTH_ART_MISSING" xml:space="preserve">
+    <value>Sorry &lt;@{0}&gt; but you did not commit the art for the last trade, you cannot enter the current trade.</value>
+  </data>
 </root>
